--- a/viajatcc-frontend/angular.json
+++ b/viajatcc-frontend/angular.json
@@ -39,7 +39,7 @@
               }
             ],
             "styles": [
-              
+              "@angular/material/prebuilt-themes/magenta-violet.css",
               "src/styles.scss"
             ],
             "scripts": [],
