--- a/viajatcc-frontend/tsconfig.json
+++ b/viajatcc-frontend/tsconfig.json
@@ -17,7 +17,8 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "types": ["google.maps"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
