--- a/viajatcc-frontend/package.json
+++ b/viajatcc-frontend/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.2",
+    "chart.js": "^3.9.1",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
+    "ng2-charts": "^4.0.1",
     "ngx-mask": "^19.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
