--- a/Mobile-viajatcc/package.json
+++ b/Mobile-viajatcc/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^7.3.2",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.1.2",
+    "@stripe/stripe-react-native": "0.38.6",
     "expo": "~52.0.39",
     "expo-checkbox": "^4.0.1",
     "expo-status-bar": "~2.0.1",
@@ -25,10 +26,12 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "latest"
   },
   "private": true
 }
