--- a/viajatcc-api/package.json
+++ b/viajatcc-api/package.json
@@ -26,7 +26,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "mongoose": "^8.13.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stripe": "^18.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
